# nacre

./: Cargo.toml  taplo.toml
src/: bar.rs  cli.rs  config.rs  graphics.rs  launcher.rs  lock.rs  main.rs  notification.rs  shell.rs  wasm.rs
src/bar/: mod.rs  render.rs
src/ipc/: hyprland.rs  mock.rs  mod.rs  niri.rs
