[package]
name = "nacre"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.1.3"
cosmic-text = "0.19.0"
facet = "0.50.0-rc.5"
facet-default = "0.50.0-rc.5"
facet-json = "0.50.0-rc.5"
facet-styx = { version = "5.0.0-rc.5", features = ["figue"] }
figue = "5.0.0-rc.5"
image = "0.25"
libc = "0.2"
nix = { version = "0.31.3", features = ["fs", "process", "user"] }
nucleo-matcher = "0.3.1"
pam-sys = "1.0.0-alpha5"
smithay-client-toolkit = "0.20.0"
taffy = "0.12.2"
tokio = { version = "1.52", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
vello = "0.9.0"
wasmtime = "46"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wgpu = "30"
winit = "0.30"
zbus = { version = "5", features = ["tokio"] }
